--- a/client/src/styles/default.css
+++ b/client/src/styles/default.css
@@ -1,4 +1,38 @@
-body {
-  margin: 0;
+html {
   padding: 0;
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+
+  /* display: flex; */
+  /* flex-flow: column; */
+}
+
+li {
+  text-decoration: none;
+  margin: 2px;
+  display: flex;
+}
+
+main {
+  display: flex;
+}
+
+section {
+  display: flex;
+  flex-flow: column;
+  flex: 1;
+}
+
+.label {
+  display: block;
+}
+
+.amount {
+  display: block;
+  margin-left: auto;
+  font-weight: bold;
 }
