--- a/client/src/components/Button/style.css
+++ b/client/src/components/Button/style.css
@@ -4,9 +4,15 @@
   padding: 0.25rem;
   border: 0;
   border-radius: 5px;
-  margin: 5px;
+  margin: 0.25rem;
+  flex: 1;
+  cursor: pointer;
 }
 
 .button:active {
   background-color: rgb(85, 95, 226);
+}
+
+.button:disabled {
+  background-color: rgb(146, 146, 146);
 }
